--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang:eng>
+<html lang="ru">
 <head>
-     <meta charset=“UTF-8”>
+     <meta charset=utf-8>
         <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
         <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>hq3</title>
 </head>
 <body>
